--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         }
         .section {
             margin-top: 30px;
+            border-top: 2px solid #ccc;
+            padding-top: 20px;
         }
         .center-img {
             display: block;
@@ -31,7 +33,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Elisabet Simamora</h1>
+        <h1 style="text-align: left;">Elisabet Simamora</h1>
         
         <div class="profile">
             <img src="https://github.com/sabet26.png?size=200" alt="Profile Picture" width="150">
@@ -45,6 +47,12 @@
             <p>During school, I studied various aspects of information technology such as computer network installation & infrastructure, server management & network security, basic programming.</p>
             <p>I am currently studying at the Batam State Polytechnic majoring in Informatics in the Software Engineering Technology Study Program.</p>
             <img src="https://media.giphy.com/media/qgQUggAC3Pfv687qPC/giphy.gif" alt="Coding" class="center-img">
+        </div>
+
+        <div class="section">
+            <h2>🎓 Educational Background</h2>
+            <p>📌 <b>Politeknik Negeri Batam</b> (2024 - Now)</p>
+            <p>📌 <b>SMK Negeri 1 Batam</b> (2021 - 2024)</p>
         </div>
 
         <div class="section">
