--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <h2>🚀 Featured Projects</h2>
             <h3>🔥 Transport Carbon Calculator</h3>
             <p>🌱 Calculate carbon footprint from transportation.</p>
-            <img src="th5.jpg?size=400" class="center-img">
+            <img src="th (4).jpg?size=400" class="center-img">
             
             <h3>📦 Manajemen Paket Polibatam</h3>
             <p>📦 A package logging system using <b>BinderByte API</b>.</p>
