--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
             
             <h3>📦 Manajemen Paket Polibatam</h3>
             <p>📦 A package logging system using <b>BinderByte API</b>.</p>
-            <img src="https://github.com/sabet26/sabet26/blob/main/logo%20simba%20new.png?size=400" class="center-img">
+            <img src="logo simba new.png?size=400" class="center-img">
             
             <h3>🎮 Game Grid Berbasis Pygame</h3>
             <p>🕹️ A <b>Tetris-like</b> game built with Python & Pygame.</p>
-            <img src="https://github.com/sabet26/sabet26/blob/main/th%20(5).jpg?size=400" class="center-img">
+            <img src="th (5).jpg?size=400" class="center-img">
         </div>
 
         <div class="section">
